--- a/src/components/Navigation/Navigation.module.css
+++ b/src/components/Navigation/Navigation.module.css
@@ -1,10 +1,17 @@
 .navEl {
+  display: flex;
+  gap: 20px;
+  align-items: center;
+  margin-left: 60px;
+}
+
+.navLink {
   color: #375f1b;
   font-weight: 600;
   text-decoration: none;
   font-size: 17px;
 }
 
-.navEl:hover {
+.navLink:hover {
   color: #66b032;
 }
