--- a/src/components/ContactList/ContactList.module.css
+++ b/src/components/ContactList/ContactList.module.css
@@ -1,11 +1,20 @@
 .listEl {
   margin-bottom: 10px;
+  display: flex;
+  gap: 10px;
 }
 
 .delBtn {
-  margin-left: 10px;
+  width: 20px;
+  height: 20px;
+  font-size: 12px;
+  border: none;
+  color: #98e462;
   cursor: pointer;
-  background-color: white;
-  border: 1px solid gainsboro;
-  border-radius: 5px;
+  padding: 5px 7px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: #1b3409;
+  border-radius: 10px;
 }
