--- a/src/components/ContactForm/ContactForm.module.css
+++ b/src/components/ContactForm/ContactForm.module.css
@@ -2,9 +2,10 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  max-width: 400px;
+  max-width: 500px;
   padding: 10px;
-  border: 1px solid black;
+  border: 1px solid #ccc;
+  margin-top: 40px;
 }
 
 .contactFormLabel {
@@ -18,15 +19,22 @@
   width: 80px;
   height: 25px;
   font-size: 12px;
-  border: none;
+  line-height: 1;
   color: #98e462;
-  cursor: pointer;
-  padding: 5px 7px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
   background: #1b3409;
+  transition: 0.35s;
+  cursor: pointer;
   border-radius: 10px;
+  border: none;
+  margin: auto;
+  justify-content: center;
+  padding: 5px 7px;
+}
+button:hover,
+button:focus {
+  box-shadow: inset 0 0 0 2em #98e462;
+  border: none;
+  color: #1b3409;
 }
 
 .inputEl {
