--- a/src/components/ContactList/ContactList.module.css
+++ b/src/components/ContactList/ContactList.module.css
@@ -17,4 +17,12 @@
   justify-content: center;
   background: #1b3409;
   border-radius: 10px;
+  transition: 0.35s;
+}
+
+.delBtn:hover,
+.delBtn:focus {
+  box-shadow: inset 0 0 0 2em #98e462;
+  border: none;
+  color: #1b3409;
 }
