--- a/src/components/LoginForm/LoginForm.module.css
+++ b/src/components/LoginForm/LoginForm.module.css
@@ -21,7 +21,7 @@
   border: 3px solid #618685;
 }
 
-.button {
+.loginButton {
   all: unset;
   width: 80px;
   height: 15px;
@@ -43,8 +43,8 @@
   margin-top: 10px;
 }
 
-.button::after,
-.button::before {
+.loginButton::after,
+.loginButton::before {
   content: '';
   position: absolute;
   bottom: 0;
@@ -53,7 +53,7 @@
   transition: all 0.4s;
 }
 
-.button::before {
+.loginButton::before {
   transform: translate(0%, 0%);
   width: 100%;
   height: 100%;
@@ -61,7 +61,7 @@
   border-radius: 10px;
 }
 
-.button::after {
+.loginButton::after {
   transform: translate(10px, 10px);
   width: 35px;
   height: 35px;
@@ -71,20 +71,20 @@
   border-radius: 50px;
 }
 
-.button:hover::before {
+.loginButton:hover::before {
   transform: translate(5%, 20%);
   width: 110%;
   height: 110%;
 }
 
-.button:hover::after {
+.loginButton:hover::after {
   border-radius: 10px;
   transform: translate(0, 0);
   width: 100%;
   height: 100%;
 }
 
-.button:active::after {
+.loginButton:active::after {
   transition: 0s;
   transform: translate(0, 5%);
 }
