--- a/src/components/RegisterForm/RegisterForm.module.css
+++ b/src/components/RegisterForm/RegisterForm.module.css
@@ -28,7 +28,7 @@
   border: 3px solid #618685;
 }
 
-.button {
+.registerButton {
   all: unset;
   width: 80px;
   height: 15px;
@@ -50,8 +50,8 @@
   margin-top: 10px;
 }
 
-.button::after,
-.button::before {
+.registerButton::after,
+.registerButton::before {
   content: '';
   position: absolute;
   bottom: 0;
@@ -60,7 +60,7 @@
   transition: all 0.4s;
 }
 
-.button::before {
+.registerButton::before {
   transform: translate(0%, 0%);
   width: 100%;
   height: 100%;
@@ -68,7 +68,7 @@
   border-radius: 10px;
 }
 
-.button::after {
+.registerButton::after {
   transform: translate(10px, 10px);
   width: 35px;
   height: 35px;
@@ -78,20 +78,20 @@
   border-radius: 50px;
 }
 
-.button:hover::before {
+.registerButton:hover::before {
   transform: translate(5%, 20%);
   width: 110%;
   height: 110%;
 }
 
-.button:hover::after {
+.registerButton:hover::after {
   border-radius: 10px;
   transform: translate(0, 0);
   width: 100%;
   height: 100%;
 }
 
-.button:active::after {
+.registerButton:active::after {
   transition: 0s;
   transform: translate(0, 5%);
 }
