--- a/src/components/UserMenu/UserMenu.module.css
+++ b/src/components/UserMenu/UserMenu.module.css
@@ -5,17 +5,24 @@
   align-items: center;
 }
 
-.button {
+.menuButton {
   width: 80px;
   height: 25px;
-  font-size: 14px;
-  border: none;
+  font-size: 12px;
+  line-height: 1;
   color: #98e462;
-  cursor: pointer;
-  padding: 5px 7px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
   background: #1b3409;
+  transition: 0.35s;
+  cursor: pointer;
   border-radius: 10px;
+  border: none;
+  margin: auto;
+  justify-content: center;
+  padding: 5px 7px;
+}
+.menuButton:hover,
+.menuButton:focus {
+  box-shadow: inset 0 0 0 2em #98e462;
+  border: none;
+  color: #1b3409;
 }
