--- a/src/components/RegisterForm/RegisterForm.module.css
+++ b/src/components/RegisterForm/RegisterForm.module.css
@@ -1,4 +1,12 @@
-.formWrapper {
+.linkEl {
+  text-decoration: none;
+}
+
+.linkEl:hover {
+  color: #1565c0;
+}
+
+/* .formWrapper {
   margin-top: 50px;
 }
 
@@ -104,4 +112,4 @@
 
 .link:hover {
   color: #66b032;
-}
+} */
