--- a/src/components/AuthNav/AuthNav.module.css
+++ b/src/components/AuthNav/AuthNav.module.css
@@ -1,17 +1,17 @@
 .navWrapper {
   display: flex;
   gap: 20px;
-  margin-right: 60px;
   align-items: center;
 }
 
 .navEl {
-  color: #375f1b;
-  font-weight: 600;
+  font-weight: 500;
   text-decoration: none;
-  font-size: 19px;
+  font-size: 1.3rem;
+  line-height: 1.334;
+  color: inherit;
 }
 
 .navEl:hover {
-  color: #66b032;
+  color: #1565c0;
 }
