--- a/src/components/UserMenu/UserMenu.module.css
+++ b/src/components/UserMenu/UserMenu.module.css
@@ -1,28 +1,10 @@
 .wrapper {
   display: flex;
   gap: 20px;
-  margin-right: 60px;
   align-items: center;
 }
 
-.menuButton {
-  width: 80px;
-  height: 25px;
-  font-size: 12px;
-  line-height: 1;
-  color: #98e462;
-  background: #1b3409;
-  transition: 0.35s;
+.logoutIcon:hover {
+  color: #1565c0;
   cursor: pointer;
-  border-radius: 10px;
-  border: none;
-  margin: auto;
-  justify-content: center;
-  padding: 5px 7px;
-}
-.menuButton:hover,
-.menuButton:focus {
-  box-shadow: inset 0 0 0 2em #98e462;
-  border: none;
-  color: #1b3409;
 }
