--- a/src/components/UserMenu/UserMenu.module.css
+++ b/src/components/UserMenu/UserMenu.module.css
@@ -8,3 +8,11 @@
   color: #1565c0;
   cursor: pointer;
 }
+
+.desktopOnly {
+  display: none;
+
+  @media (min-width: 768px) {
+    display: inline;
+  }
+}
