--- a/src/components/AppBar/AppBar.module.css
+++ b/src/components/AppBar/AppBar.module.css
@@ -1,9 +1,17 @@
 .header {
-  background-image: linear-gradient(to bottom right, #eaffdb, #ebf6e5, #c1e2ab);
+  margin: 0 auto;
+  border-bottom: 1px solid lightgray;
+  max-width: 320px;
+  @media (min-width: 768px) {
+    max-width: 768px;
+  }
+  @media (min-width: 1200px) {
+    max-width: 1000px;
+  }
 }
 
 .navWrapper {
   display: flex;
   justify-content: space-between;
-  padding: 25px 0px;
+  padding: 20px 15px;
 }
