--- a/src/components/AuthNav/AuthNav.module.css
+++ b/src/components/AuthNav/AuthNav.module.css
@@ -5,13 +5,24 @@
 }
 
 .navEl {
-  font-weight: 500;
   text-decoration: none;
-  font-size: 1.3rem;
+  font-size: 1rem;
   line-height: 1.334;
   color: inherit;
+  display: flex;
+  align-items: center;
+  flex-direction: row;
+  gap: 5px;
+
+  &:hover {
+    color: #1565c0;
+  }
 }
 
-.navEl:hover {
-  color: #1565c0;
+.desktopOnly {
+  display: none;
+
+  @media (min-width: 768px) {
+    display: inline;
+  }
 }
