--- a/src/components/LoginForm/LoginForm.module.css
+++ b/src/components/LoginForm/LoginForm.module.css
@@ -1,108 +1,7 @@
 .linkEl {
   text-decoration: none;
-}
 
-.linkEl:hover {
-  color: #1565c0;
+  &:hover {
+    color: #1565c0;
+  }
 }
-
-/* .formWrapper {
-  margin-top: 50px;
-}
-
-.formEl {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 10px;
-}
-
-.inputEl {
-  padding: 10px 40px 10px 15px;
-  border: 3px solid #ccc;
-  -webkit-transition: 0.5s;
-  transition: 0.5s;
-  outline: none;
-}
-
-.inputEl:focus {
-  border: 3px solid #618685;
-}
-
-.loginButton {
-  all: unset;
-  width: 80px;
-  height: 15px;
-  font-size: 16px;
-  background: transparent;
-  border: none;
-  position: relative;
-  color: #98e462;
-  cursor: pointer;
-  z-index: 1;
-  padding: 10px 15px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  white-space: nowrap;
-  user-select: none;
-  -webkit-user-select: none;
-  touch-action: manipulation;
-  margin-top: 10px;
-}
-
-.loginButton::after,
-.loginButton::before {
-  content: '';
-  position: absolute;
-  bottom: 0;
-  right: 0;
-  z-index: -99999;
-  transition: all 0.4s;
-}
-
-.loginButton::before {
-  transform: translate(0%, 0%);
-  width: 100%;
-  height: 100%;
-  background: #1b3409;
-  border-radius: 10px;
-}
-
-.loginButton::after {
-  transform: translate(10px, 10px);
-  width: 35px;
-  height: 35px;
-  background: #ffffff15;
-  backdrop-filter: blur(5px);
-  -webkit-backdrop-filter: blur(5px);
-  border-radius: 50px;
-}
-
-.loginButton:hover::before {
-  transform: translate(5%, 20%);
-  width: 110%;
-  height: 110%;
-}
-
-.loginButton:hover::after {
-  border-radius: 10px;
-  transform: translate(0, 0);
-  width: 100%;
-  height: 100%;
-}
-
-.loginButton:active::after {
-  transition: 0s;
-  transform: translate(0, 5%);
-}
-
-.link {
-  font-weight: bold;
-  text-decoration: none;
-  color: #375f1b;
-}
-
-.link:hover {
-  color: #66b032;
-} */
