--- a/src/components/ContactForm/ContactForm.module.css
+++ b/src/components/ContactForm/ContactForm.module.css
@@ -4,7 +4,9 @@
   align-items: flex-start;
   padding: 20px;
   border: 1px solid #ccc;
+  border-radius: 5px;
   margin-top: 40px;
+  width: 265px;
 }
 
 .button {
